# py-agent

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  PROVIDERS.md  QUICKSTART.md  README.md  pyproject.toml
docs/: README.md  agent-loop.md  architecture.md  building-your-own-agent.md  commands.md  configuration.md  development.md  getting-started.md  hooks.md  models-and-providers.md  permissions.md  sessions.md  skills.md  tools.md
docs/tutorials/: 01-smallest-loop.md  02-tools.md  03-interactive.md  04-production-seams.md  05-make-it-your-own.md  README.md
src/agent/: __init__.py  _markdown.py  app.py  checkpoints.py  cli.py  commands.py  compaction.py  config.py  hooks.py  loop.py  model.py  models_registry.py  permissions.py  picker.py  render.py  retry.py  sessions.py  settings.py  skills.py  system_prompt.py  types.py  wire.py
src/coding_agent/: __init__.py  app.py  cli.py  loop.py  model.py  render.py  system_prompt.py  types.py
tests/: fakes.py  test_app.py  test_checkpoints.py  test_commands.py  test_compaction.py  test_e2e_integration.py  test_hooks.py  test_loop.py  test_memory_tools.py  test_model.py  test_models_registry.py  test_oauth.py  test_permissions.py  test_permissions_persist.py  test_picker.py  test_providers_anthropic.py  test_providers_openai.py  test_render.py  test_retry.py  test_scaffold.py  test_search_tools.py  test_sessions.py  test_settings.py  test_skills.py  test_system_prompt.py  test_task.py  test_tool_registry_consistency.py  test_tools.py  test_tools_todo.py  test_types.py  test_types_integration.py  test_web_tools.py
(+28 files in other folders)
